--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El titulo del post</title>
-
-</head>
-<body>
-    <h1>El titulo del post</h1>
-    <p>El parrafo del post</p
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body>
+    <div id="conteiner">
+      <div id="cabecera">cabecera</div>
+      <div id="post">
+        <h1>El titulo del post</h1>
+        <p>El parrafo del post</p>
+      </div>
+    </div>
+  </body>
 </html>
