finalizada la cabecera con diseño azul

--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
   </head>
   <body>
-    <div id="conteiner">
+    <div id="container">
       <div id="cabecera">cabecera</div>
       <div id="post">
         <h1>El titulo del post</h1>
