--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El titulo del post</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <h1>El titulo del post</h1>
-    <p>El parrafo del post</p
-</body>
+    <p>El parrafo del post</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid unde
+      culpa, dolores reiciendis aspernatur veritatis odio aliquam rem quas dolor
+      voluptatem error aperiam suscipit laudantium, voluptates, alias molestias
+      minima voluptatum.
+    </p>
+  </body>
 </html>
