--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
       <div id="post">
         <h1>El titulo del post</h1>
         <p>El parrafo del post</p>
+        <p>El parrafo del post</p>
+        <p>El parrafo del post</p>
       </div>
     </div>
   </body>
