--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="container">
-      <div id="cabecera">cabecera</div>
+      <div id="cabecera">se cambio la cabecera del repo</div>
       <div id="post">
         <h1>El titulo del post</h1>
         <p>El parrafo del post</p>
